# stock-alert

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  LICENSE  LICENSE.md  README.md  docker-compose-dev.yml  pyproject.toml
.chglog/: config.yml
.github/workflow/: sync-docs.yaml
.github/workflows/: sync-docs.yml
config/: __init__.py  settings.py
config/prompts/: __init__.py  agents.py  data_query_agent.yaml  inventory_operator_agent.yaml  summarization.py  system.py  system.yaml
docs/: CHANGELOG.md
scripts/: start_agent.sh
src/: __init__.py  main.py
src/agents/: base.py  base_agent.py  data_query_agent.py  inventory_agent.py  inventory_operate.py  knowledge_search_agent.py  supervisor_agent.py  suppliers_agent.py
src/api/: dependencies.py  schemas.py
src/api/middleware/: __init__.py  auth.py
src/api/routers/: chat.py  health.py  user.py
src/core/: agent_state.py  llm_client.py  schemas.py
src/core/llm/: __init__.py  base.py  base_client.py  factory.py  llm.py  openai_client.py  validators.py
src/core/llm/providers/: __init__.py  openai.py  qwq.py
src/events/: __init__.py  consumer.py  decoder.py  schemas.py
src/events/handlers/: __init__.py  base_handler.py  handler_registry.py  inventory_duduct_success.py
src/events/protos/: __init__.py  base_event_pb2.py  product_event_pb2.py
src/graph/: __init__.py  inventory_manager.py  setup.py
src/knowledge/: CLAUDE.md  __init__.py  embedding.py  retriever.py  splitter.py  vector_store.py
src/memory/: checkpointer.py
src/repository/: session.py  user.py
src/service/: chat.py  session.py  user.py
src/storage/: __init__.py  mysql.py  redis.py  session_store.py
src/tools/: __init__.py  base_tool.py  knowledge_search.py  query_inventory.py  registry.py  restock_apply.py
src/ui/: __init__.py  gradio_app.py
src/utils/: api_client.py  jwt.py  jwt_util.py  logger.py  password.py  plain_text.py
tests/: test_splitter.py
