[project]
name = "stock-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.2.12",
    "langchain-qwq>=0.3.4",
    "langchain-openai>=0.3.0",
    "python-consul>=1.1.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
    "protobuf>=7.34.0",
    "gradio==6.5.1",
    "aiomysql>=0.2.0",
]
