[project]
name = "stock-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.2.12",
    "langchain-qwq>=0.3.4",
    "langchain-openai>=0.3.0",
    "python-consul>=1.1.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
    "protobuf>=7.34.0",
    "pymysql>=1.1.0",
    "dbutils>=3.1.0",
    "python-dotenv",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "langgraph-checkpoint-redis>=0.4.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
