[project]
name = "stock-alert"
version = "2.0.0"
description = "库存管理AI Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.2.12",
    "langchain-core>=1.3.0",
    "langchain-qwq>=0.3.4",
    "langchain-openai>=0.3.0",
    "langchain-community==0.4.1",
    "langchain-text-splitters>=1.1.2",
    "langchain_milvus>=0.3.3",
    "langgraph>=1.1.0",
    "langgraph-checkpoint-redis>=0.4.0",
    "python-consul>=1.1.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
    "protobuf>=7.34.0",
    "pymysql>=1.1.0",
    "dbutils>=3.1.0",
    "redis>=5.0.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "python-dotenv",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "python-multipart>=0.0.24",
    "pymilvus==2.6.9",
    "dashscope==1.25.17",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ragas>=0.4.3"
]
